// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log functions stepBanner outputs correct string for step 1 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Load the template
________________________________________________________________________________"
`;

exports[`log functions stepBanner outputs correct string for step 2 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Gather parameters
________________________________________________________________________________"
`;

exports[`log functions stepBanner outputs correct string for step 3 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Generate Module
________________________________________________________________________________"
`;

exports[`log functions stepBanner outputs correct string for step 4 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Initialize git
________________________________________________________________________________"
`;

exports[`log functions stepBanner outputs correct string for step 5 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Install, build and test the module, this may take a minute
________________________________________________________________________________"
`;

exports[`log functions stepBanner outputs correct string for step 6 1`] = `
"[2J

 _   _     _               _____                    _       _
| | | |___(_)_ __   __ _  |_   _|__ _ __ ___  _ __ | | __ _| |_ ___
| | | / __| | '_ \\\\ / _\` |   | |/ _ \\\\ '_ \` _ \\\\| '_ \\\\| |/ _\` | __/ _ \\\\
| |_| \\\\__ \\\\ | | | | (_| |   | |  __/ | | | | | |_) | | (_| | ||  __/
 \\\\___/|___/_|_| |_|\\\\__, |   |_|\\\\___|_| |_| |_| .__/|_|\\\\__,_|\\\\__\\\\___|
                   |___/                     |_|              vpackageVersionMock

Step 1 -> Step 2 -> Step 3 -> Step 4 -> Step 5 -> Step 6
Initial Commit
________________________________________________________________________________"
`;
